--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        /* Set the body and html to have no margins and make sure the image covers the entire screen */
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ensures the image covers the whole screen without distortion */
+        }
+    </style>
 </head>
 <body>
-    
+    <img src="https://cdn.nba.com/headshots/nba/latest/1040x760/2544.png" alt="Description of image">
 </body>
 </html>
