--- a/index.html
+++ b/index.html
@@ -3,67 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hire Vision - VR AI Powered Mock Interview App</title>
-    <style>
-        /* Reset body and html margins, padding and ensure full height */
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            background-color: #f4f4f9;
-        }
-
-        /* Container for content */
-        .container {
-            max-width: 800px;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            text-align: center;
-        }
-
-        h1 {
-            color: #2c3e50;
-            font-size: 36px;
-        }
-
-        p {
-            color: #7f8c8d;
-            font-size: 18px;
-            line-height: 1.6;
-        }
-
-        .cta-button {
-            background-color: #3498db;
-            color: white;
-            padding: 12px 24px;
-            font-size: 18px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 20px;
-            text-decoration: none;
-        }
-
-        .cta-button:hover {
-            background-color: #2980b9;
-        }
-    </style>
+    <meta http-equiv="refresh" content="0; url=https://medvisionuc.pythonanywhere.com">
+    <title>Redirecting...</title>
 </head>
 <body>
-
-    <div class="container">
-        <h1>Welcome to Hire Vision</h1>
-        <p>Your VR and AI-powered mock interview assistant designed to help you ace your job interviews!</p>
-        <p>With realistic simulations and AI-driven feedback, you can practice anytime, anywhere.</p>
-        <a href="#" class="cta-button">Get Started</a>
-    </div>
-
+    <p>If you are not redirected, <a href="https://medvisionuc.pythonanywhere.com">click here</a>.</p>
 </body>
 </html>
